# google-apis-rs

./: Cargo.toml
src/mako/: Cargo.toml.mako
src/mako/api/: lib.rs.mako
src/mako/api/lib/: mbuild.mako
src/mako/lib/: util.py
src/rust/: lib.rs
src/rust/api/: cmn.rs
