# DO NOT PUBLISH
# This library is just to try out the code that should ultimately go into the code generator !
[package]

name = "cmn"
version = "0.0.1"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "A library to facilitate interacting with your youtube account"
repository = "https://github.com/Byron/google-apis-rs"
license = "MIT/Apache-2.0"
keywords = ["youtube", "google", "protocol", "not-for-use"]

[lib]
# The common code, used by all generated implementations
name = "cmn"
path = "src/rust/lib.rs"

[dependencies]
clap = "*"
hyper = "^ 0.12"
futures = "^ 0.1"
mime = "^ 0.3.0"
rustc-serialize = "*"
yup-oauth2 = { git = "https://github.com/fzzzy/yup-oauth2.git", branch = "pull-from-thebiggerguy" }
yup-hyper-mock = "3.15.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
strsim = "*"
